# quaint

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  index.html  make.bat  objects.inv  pyproject.toml  search.html  searchindex.js  tox.ini
.github/workflows/: ci.yml
_sources/: index.rst.txt
_static/: q_logo.pxm
docs/source/: conf.py
src/quaint/: confuse.pyi  main.py  main.pyi
tests/: main_test.py  test.yaml
