[tool.poetry]
name = "quaint"
version = "0.1.0"
description = ""
authors = ["Sinan Inel <sinan.inel@farsimple.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/farsimple/quaint"

[tool.poetry.scripts]
main = "quaint.main:run"

[tool.poetry.dependencies]
python = "^3.9"
arrow = "^1.2.2"
click = "^8.0.4"
sphinx = "^4.4.0"
sphinx-book-theme = "^0.2.0"
sphinxcontrib-napoleon = "^0.7"
PyYAML = "^6.0"
confuse = "^1.7.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
isort = "^5.10.1"
black = "^22.1.0"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
xdoctest = "^0.15.10"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
seed-isort-config = "^2.2.0"
pre-commit = "^2.17.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
balanced_wrapping = true
order_by_type = true
use_parentheses = true
force_sort_within_sections = true
reverse_relative = true
known_first_party = "quaint"
src_paths = ["src", "tests"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
python_files = "*_test.py"
python_functions = "test_*"
addopts = "--capture=tee-sys --cov=src --xdoctest tests"
filterwarnings = "ignore::DeprecationWarning"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
